# scholar_source

./: .env.example  .gitignore  BACKEND_TESTING.md  CACHE_IMPLEMENTATION_PLAN.md  Deployment_Plan.md  Future_plans.md  IMPLEMENTATION_PLAN.md  QUICKSTART.md  README.md  TAILWIND_INTEGRATION_PLAN.md  pyproject.toml  requirements.txt  supabase_schema.sql  test_crew.py
backend/: CACHE_GUIDE.md  __init__.py  cache.py  crew_runner.py  database.py  email_service.py  jobs.py  logging_config.py  main.py  markdown_parser.py  models.py
src/scholar_source/: crew.py  main.py
src/scholar_source/config/: agents.yaml  tasks.yaml
src/scholar_source/tools/: __init__.py  webpage_fetcher.py
web/: .env.example  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/src/: App.jsx  index.css
web/src/api/: client.js
web/src/components/: CourseForm.css  CourseForm.jsx  LoadingStatus.css  LoadingStatus.jsx  ResultsTable.css  ResultsTable.jsx  SkeletonResourceList.css  SkeletonResourceList.jsx
web/src/pages/: HomePage.css  HomePage.jsx
